finished Day 10 Part 1. was simple but tricky.

--- a/Day 9 - Stream Processing.ipynb
+++ b/Day 9 - Stream Processing.ipynb
@@ -122,37 +122,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This looks like a job for recursion.\n",
-    "\n",
-    "So I'm going to work through the entire string of characters, find an enclosing group and pass that group to the score function again:"
+    "This looks like a job for recursion, but I'm going to do it the easy way:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{} 1\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
        "1"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "import re\n",
-    "\n",
     "def score(stream):\n",
     "    \"\"\"takes in a stream of characters and returns the score\"\"\"\n",
     "    stream = remove_garbage(stream)\n",
@@ -162,7 +151,6 @@
     "    total_count = 0\n",
     "    \n",
     "    for i, char in enumerate(stream):\n",
-    "\n",
     "        if char == \"{\":\n",
     "            inside_group = True\n",
     "            group_count += 1\n",
@@ -170,7 +158,6 @@
     "            total_count += group_count\n",
     "            group_count -= 1\n",
     "    \n",
-    "    print(stream, total_count)\n",
     "    return total_count\n",
     "                \n",
     "score(\"{}\")   "
@@ -185,47 +172,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 70,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{} 1\n",
-      "{{{}}} 6\n",
-      "{{},{}} 5\n",
-      "{{{},{},{{}}}} 16\n",
-      "{,,,} 1\n",
-      "{{},{},{},{}} 9\n",
-      "{{},{},{},{}} 9\n",
-      "{{}} 3\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "assert score(\"{}\") == 1\n",
     "assert score(\"{{{}}}\") == 6\n",
     "assert score(\"{{},{}}\") == 5\n",
     "assert score(\"{{{},{},{{}}}}\") == 16\n",
-    "assert score(\"{<a>,<a>,<a>,<a>}\") == 1.\n",
-    "assert score(\"{{<ab>},{<ab>},{<ab>},{<ab>}}\") == 9.\n",
-    "assert score(\"{{<!!>},{<!!>},{<!!>},{<!!>}}\") == 9.\n",
-    "assert score(\"{{<a!>},{<a!>},{<a!>},{<ab>}}\") == 3."
+    "assert score(\"{<a>,<a>,<a>,<a>}\") == 1\n",
+    "assert score(\"{{<ab>},{<ab>},{<ab>},{<ab>}}\") == 9\n",
+    "assert score(\"{{<!!>},{<!!>},{<!!>},{<!!>}}\") == 9\n",
+    "assert score(\"{{<a!>},{<a!>},{<a!>},{<ab>}}\") == 3"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'{{{{{<!>,<!o,!!!>{>,{<<a!>u!>eio!>ui>}},{},{{<!!e!>>},{{<uo\\'<!!!>>},{<!>\\'!>},<e!>,<\"ea!!!>!>,<>}}}},{{{{<\"a\">,<!><<>}}}},{{{{{},{<{!!\"!><ae<},!>!>!!!>}\\'!!>}},<!!a{!!!!!>!>,<!!!>,<{oiu<a!!,<>},{<>}}}},{{{{<eoa!!eeea{!,<>}},{{<!!!!,}!>!!a!!!}e!>},<!!!!!>!>i!e!>,<!u<!!{!!!>!!!>>}}}},{{{{{<!ea,uio!}\"!>},<!>},<u<!!!!o!<,!>>,<!>},<\">},{}},{<ua\"!>,<!!!>eouaa\"o}!!!>!>,<>}},{<a}!>!!<\\'a!!<!u!!!!!>!!!>!!!a!>},<!>,<>}},{{{},{{{},<ua}!>!!!>i}}u!!!>},<!>!ii!!\\'!,>},{{<{>},{<i<!!!e}!>,<!\"\\'a!!u!!{\\',>}}}},{<!>},<!!!!},o}!!}{!!!\">}}},{{{{},{<!>},<!!!!!>}}{\\'>}}},{{{{<},{a!>,<>}},{<>,<!i>}},{{{<\"u!i{!i}a!!!>\"\\'>}}}},{{{<<e!\\'!!i\\'!!}{!>,<u,\"\"!!i<ui!!!!!>!!<>},<!!!>\\'u!!ea!>u\\'!>}!!!!!>>},{{}},{<\"i}u,,>}}}},{{{{{{<\\',!!,uo!,\"<,{!i\"{<<o<o>},<<a!>},<!!ee\"\\'!!>},<>},{{},{<{!!!!,!>,<,\">}},{{}}},{{{{},<,}i!!,e!>,<!!!!<!!}!!{!>i{ou>},{{},{<!!!>a\"!!!>!!!>a,!!i!>,<!<\"e\"i}!!i\\'e!!!>>}}},{{<{!>!>},<a<i!>,<uao>,{{<<>},<!!!e}a!>}>}},{{<\"!\"a,!!!>{}!!u\\'u{>}}},{{<oe!>},<\\'!><>},{<!!!>i!!!>!!!oa<!><oeo!>},<>},{<}!!!!\"!a,!!\\'!!!>>,<!!!>!>},<!>>}},{{{<ei<\"!\">,<io!!!!},!!<!!a<!{a,\\'ei>},{}},{<}!!!>,<!!!>!>},<!i}<i>,<a\\',!>{!>},<o!>!!!!!>\"o!!!!!{}!o>}}},{{{<\">,{}},{{{<\"}!i!!oi!!!>},<\\'\\'>},{}},{{<u!>,<ea!>},<!!!>!!>}}}}}},{},{},{{{{{}},'"
+       "'{{{{{<!>,<!o,!!!>{>,{<<a!>u!>eio!>ui>}},{},{{<!!e!>>},{{<uo\\'<!!!>>},{<!>\\'!>},<e!>,<\"ea!!!>!>,<>}}}},{{{{<\"a\">,<!><<>}}}},{{{{{},{<{!!\"!><ae<},!>!>!!!>}\\'!!>}},<!!a{!!!!!>!>,<!!!>,<{oiu<a!!,<>},{<>}}}},{{{{<eoa!!eeea{!,<>}},{{<!!!!,}!>!!a!!!}e!>},<!!!!!>!>i!e!>,<!u<!!{!!!>!!!>>}}}},{{{{{<!ea,uio!}\"!>},<!>},<u<!!!!o!<,!>>,<!>},<\">},{}},{<ua\"!>,<!!!>eouaa\"o}!!!>!>,<>}},{<a}!>!!<\\'a!!<!u!!!!!>!!!>!!!a!>},<!>,<>}},{{{},{{{},<ua}!>!!!>i}}u!!!>},<!>!ii!!\\'!,>},{{<{>},{<i<!!!e}!>,<!\"\\'a!!u!!{\\',>}}}},{<!>},<!!!!},o}!!}{!!!\">}}},{{{{},{<!>},<!!!!!>}}{\\'>}}},{{{{<},{a!>,<>}},{<>,<!i>}},{{{<\"u!i{!i}a!!!>\"\\'>}}}},{{{<<e!\\'!!i\\'!!}{!>,<u,\"\"!!i<ui!!!!!>!!<>},<!!!>\\'u!!ea!>u\\'!>}!!!!!>>},{{}},{<\"i}u,,>}}}},{{{{{{<\\',!'"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -233,29 +205,21 @@
    "source": [
     "with open('puzzle_inputs/day9_input.txt') as f:\n",
     "    puzzle_input = f.read()\n",
-    "puzzle_input[:1200]"
+    "puzzle_input[:700]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{{{{{,{}},{},{{},{{},{}}}},{{{{,}}}},{{{{{},{}},},{}}}},{{{{}},{{}}}},{{{{{,},{}},{}},{}},{{{},{{{},},{{},{}}}},{}}},{{{{},{}}},{{{{}},{,}},{{{}}}},{{{},},{{}},{}}}},{{{{{{},},},{{},{}},{{}}},{{{{},},{{},{}}},{{,{{},}},{{}}},{{},{},{,}},{{{,},{}},{,}}},{{{,{}},{{{},{}},{{}}}}}},{},{},{{{{{}},{}},{{{{},},{}}},{{,},{},{{},{{},}}},{{{}},{{,{}}}}},{{{},{{}}},{{}},{{,{}}}},{{{{{,{{}}},{{}}},{{},{{}}},{{},{}}},{}},{{},{{{}}}}},{{{},},{{{}},{{{}}}},{,}}},{{{,{}},{{},{}}},{},{{{},},{,{{},}},{}}}},{{{{{{},{{}},{{}}},{{{},},{,}}},{{,}}},{{{,{}},{}},{},{{{}},{{{{}},{{}}},{{}}},{{}}}}},{{{,{}},{},{{{{{},{,}}},{{{},}},{}},{{}},{{},{}}}},{{}},{{},{{},},{,{}}},{{},{}}},{{{,},{{},{}}},{{{{{},{}},{{{{}},{}}},{}},{{{{}},{}},{{{{}},{}},{{}}},{{{},{}},{},{{},}}},{{{},{{},}},{{},{}}}},{{,{{}}},{{},},{,}}},{{,{}}}}},{{{{{{{},{}},{,{}}},{},{{{{{{},{}},{{{},{{,{}}}}},{{,},{{},},{{}}}}},{{{}}},{}},{{{{},{{}},{{{}}}},{{{,}},{},{{},}}},{{}},{{{},{{},}},{{{},{,},{,{{}}}},{{,{{},{{},{{}}}}},{{}}},{{{}},{{},{}}}}},{{,},{{{},{}},}}},{{,}},{{{,{{}}}},{{{},},{{},{}}}}},{{{{},},{{}},{{{{}},{}},{}}},{{{,},{}},{{{}},{}},{{{},{}},{,}}},{{{}},{}}}},{{{{{},},{}},{},{{{{}},{{},}},{,},{}}},{},{{{},},{},{{},}},{{{},{{{},{}},{,{,}},{{},}},{{}}},{{}},{{{},{{},{{},}}},{{{},{{},{{,{}}},{}},{{{},}}},{},{}},{{{}}}}}},{{{},{}},{{},}},{{{{}}},{,{}}}},{{{{{{},},{}}},{{{{}},{{{{}}},}},{{{{{},{{}}}},{{{},{}},{{}}}},{{,},{,{}}}}},{{{},{}},{{,},{{{},}},{,{{}}}}},{{,{}},{{},},{{{},{{}}},{{{}}}}}},{{{{{},}},{{{},{}}},{{},{,}},{{{{{{,},{{{,{}}},{{},{}},{{},}},{{},}},{{{},{{}}},{}},{{{},{,}}}},{{{,}},{{},}}},{{,{}}},{}},{{{{},{,}}},{},{,}}}},{{{},},{{},},{,{}}},{{{,},{{},{}}},{{},}},{{{}},{}}}},{}},{},{{{{,},{{}},{}},{,},{{{{},{}},{{,}},{}},{{}},{{{{{},{,}},{}}},{,{}},{,{}}}}},{{{{,},{}},{{},}},{{,}}},{{,{{{,{{,{}},{}}},},{}}},{{{},{}},{{{},{}},{},{,}},{{{},{{},}}}},{}},{{{},},{{},{}},{,{{}}}}}},{{{{{,},{{},},{,{{},}}},{{}}},{{{{{}},{{}}}},{{},{}},{{{},}}}}},{{{{{{{{,{}}},{{{}},},{{},{}}},{{{}},{{,{}},},{{{}},{{},}}},{{{},},{{{{}}}},{,{}}},{{},{{{{}},{{{}}},{,{}}},{{}}},{{}}}},{{{},{{{}},{{,},{}}}},{{{{}},{}},{{{},{}}}},{{{},},{{{{,{}},{}},{{{}},{}}}},{{}}},{{{}},{}}},{{{},},{,}}}},{{{{},{{},}},{{{}},{{,{{{{},},{}},{}}},{{,}}}},{{},{}}},{{{{{{},{{}},{{},}},{{},{{{},{{{},},}},{{{}}},{{{}},{,{}},{{{},{}}}}},{{}}},{{,},{{},{}}}},{{{{{}},{{},{}},{}},{{},{}},{}},{{{{}}},{{}}},{,{}}},{{{{{}}},{,{}},{}},{{{,},{,},{{},{{},{}},{{},{}}}}},{{{{,{}},{{}}},{},{,{}}},{,},{{},{}}}},{{{},{}}}},{{{}}},{{{{},{}},}},{{}}},{{},{}},{{{{},{{},{}}}},{{{}},{,},{{},{{}}}}}},{{},{,},{,{}}}},{{{}},{{,{,}}}}},{{{{{{{},{}},{{{{{}},},{{},{}}},{{}},{,{}}}},{{{},},{{},},{{{{{,{}},{,{}},{{},{}}},{{}},{{,{{{},{{}}},}},{{,}},{,{}}}}},{}}},{{{}},{,}},{{{,{}},},{{},{}}}},{{{{{{}},{{}}},{{}}},{},{{{}}}},{,},{{}}},{{{},{{},},{,{}}},{{,{{},}}}}},{},{{{{{{},}}}},{{{},{}},{{}}},{{{{}}},{{,{{},{}}},{{,{}}}},{{{},},{,{}},{{},}}},{{,{}},{{{{},{{},{}}},{{{}},{{}}},{{}}},{}},{,}}},{{{{},{}},{{{,{}},{}},{{},{}}},{{{{}},{{},},{,{}}},{{{},},{{{{},{}},{{}},{{{},{}},{}}},{},{{},}},{{,},{{{}},{},{{},{}}}}},{{{},},{{{,{{{},},}},{{},{}}},{}}},{{{{}}},{{{,}}},{{}}}}},{{}},{{{{},{{},{}}},{{{{}},},},{,{}}},{{{{}},{{{}}}}},{{{},},{,{}}}}},{{{{{},{,{}}},{},{{},}}},{{{{{{},{}},{{{{{},},},{{},{}}},},{{,},{{},}}},{{}},{{},{{}},{}}}},{{{,}},{,{}},{{}}},{{{}},{{{{}},}}},{{{}},{{{},}},{{}}}},{{},{{{},},{,}},{{,{}},}},{{{{},{}}},{{{},}},{{}}}}},{{{{},},{{,{}}}},{{{{}},{{},{{{}},{}},{}},{{{},{}},{{,{,{}}}}}},{{{},{{{{}}}}},{{{{{{{},{}},},{}},{}},{{}}},{,},{{{{},{}},{,}}}}},{{},{{},}},{{{{{{{},{}},},},{{},{,{}}},{{}}},{{{{},{{}}}}}},{{},},{{,},{},{{{},{{{},{}}}},{}}}}},{},{{,},{{},{{},{}}}}},{{{{},{}},{{},{}}},{{{{},{{},}},{,}}}},{{{{},{}},{}},{{{},{{}}},{,{{{},}}},{{{}}}}}},{{{},{{{},{}},{{}}},{{{{}},},{},{{}}}},{{},{{,{{},{}}}},{{,{}},{}},{{},{{}}}}},{{{{},{},{{},}},{{{}}},{{{{},{}},{{{},{}},{{,{}},{}},{{{}}}},{{{},{{{}},}}}},{{,{}},{{{{{},{}},{}},},{},{,{{}}}}},{{},{{,{}},{{}}},{}}},{{{{},{}},},{{},{{{,},},{{}}}},{{},{}}}},{{{{{,{}},{{},{}},{,}},{,},{{{},{}},{}}},{{}}},{{{{}},},{{,},},{,{}}},{{},{{},{,{{},{}}}}},{{},{}}}}}}\n",
-      " 12803\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
        "12803"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -296,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -345,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -354,13 +318,23 @@
        "6425"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "remove_garbage_and_count(puzzle_input)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Notes:\n",
+    "\n",
+    "- could have used regex to find groups\n",
+    "- my group counting works only for this instance, better solutions exist, look up"
    ]
   }
  ],
