sovled day 13, part 1 was easy but had to brute force part 2 solution

--- a/Day 12 - Digital Plumber.ipynb
+++ b/Day 12 - Digital Plumber.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -55,7 +55,7 @@
        " '4 <-> 467, 1282']"
       ]
      },
-     "execution_count": 176,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -99,7 +99,7 @@
        " '6 <-> 4, 5']"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +137,7 @@
        "{0: [2], 1: [1], 2: [0, 3, 4], 3: [2, 4], 4: [2, 3, 6], 5: [6], 6: [4, 5]}"
       ]
      },
-     "execution_count": 180,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -228,6 +228,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now to plot the graph:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 147,
    "metadata": {},
@@ -247,6 +254,13 @@
     "%matplotlib inline\n",
     "import matplotlib.pyplot as plt\n",
     "nx.draw(G, with_labels=True, font_weight='bold')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "the nx function below returns all the nodes connected to a given node:"
    ]
   },
   {
@@ -381,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 237,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -390,7 +404,7 @@
        "{0: [2], 1: [1], 2: [0, 3, 4], 3: [2, 4], 4: [2, 3, 6], 5: [6], 6: [4, 5]}"
       ]
      },
-     "execution_count": 237,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -409,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -431,7 +445,7 @@
        "  (6, 5)])"
       ]
      },
-     "execution_count": 232,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -463,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 277,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -472,22 +486,23 @@
        "{0, 2, 3, 4, 5, 6}"
       ]
      },
-     "execution_count": 277,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "def connected_nodes(n, d):\n",
-    "    search = [n]\n",
-    "    ans = set()\n",
+    "def connected_nodes(n, graph):\n",
+    "    search_these_nodes = [n] # we start of by searching the first node\n",
+    "    ans = set() # these are the nodes connected together\n",
     "    \n",
-    "    while search:\n",
-    "        program = search.pop()\n",
+    "    while search_these_nodes:\n",
+    "        program = search_these_nodes.pop()\n",
     "        ans.add(program)\n",
-    "        for p in d[program]:\n",
-    "            if p not in ans and p not in search:\n",
-    "                search.append(p)\n",
+    "        \n",
+    "        for p in graph[program]: \n",
+    "            if p not in ans and p not in search_these_nodes:\n",
+    "                search_these_nodes.append(p)\n",
     "    return ans\n",
     "\n",
     "d = make_dict(test_case)\n",
@@ -496,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 278,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -505,7 +520,7 @@
        "152"
       ]
      },
-     "execution_count": 278,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -524,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 279,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -533,13 +548,15 @@
        "(2, [{0, 2, 3, 4, 5, 6}, {1}])"
       ]
      },
-     "execution_count": 279,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "def sub_graphs(desc):\n",
+    "    \"\"\"takes in a graph description and returns a list of sub_graphs\"\"\"\n",
+    "    \n",
     "    d = make_dict(desc)\n",
     "\n",
     "    sub_graphs = []\n",
@@ -555,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 280,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -2180,7 +2197,7 @@
        "  {1961}])"
       ]
      },
-     "execution_count": 280,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2188,37 +2205,6 @@
    "source": [
     "sub_graphs(puzzle_input)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 272,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n",
-      "1\n",
-      "2\n",
-      "3\n",
-      "4\n",
-      "5\n",
-      "6\n"
-     ]
-    }
-   ],
-   "source": [
-    "for a in d.keys():\n",
-    "    print(a)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
