knot hash part two works!

--- a/Day 10 - Knot Hash.ipynb
+++ b/Day 10 - Knot Hash.ipynb
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -58,7 +58,7 @@
        "[129, 154, 49, 198, 200, 133, 97, 254, 41, 6, 2, 1, 255, 0, 191, 108]"
       ]
      },
-     "execution_count": 151,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -77,18 +77,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[0, 4, 2, 3, 1]"
-      ]
-     },
-     "execution_count": 149,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'cur_pos' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-3-76f66c10001d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     33\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mstring\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     34\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 35\u001b[0;31m \u001b[0mmake_substring_and_reverse\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-3-76f66c10001d>\u001b[0m in \u001b[0;36mmake_substring_and_reverse\u001b[0;34m(start_idx, length)\u001b[0m\n\u001b[1;32m     23\u001b[0m         \u001b[0;31m# now to update the actual string\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     24\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 25\u001b[0;31m         \u001b[0mtemp_pos\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcur_pos\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     26\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     27\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mchar\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mreverseString\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'cur_pos' is not defined"
+     ]
     }
    ],
    "source": [
@@ -119,7 +121,7 @@
     "        temp_pos = cur_pos\n",
     "        \n",
     "        for char in reverseString:\n",
-    "            if temp_pos == len(string):\n",
+    "            if temp_pos >= len(string):\n",
     "                temp_pos = 0\n",
     "            string[temp_pos] = char\n",
     "            temp_pos += 1\n",
@@ -138,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -188,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -250,10 +252,177 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[17, 31, 73, 47, 23]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "suffix = [int(i) for i in \"17,31,73,47,23\".split(\",\")]\n",
+    "suffix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[49, 50, 57, 44, 49, 53, 52, 44, 52, 57]"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "puzzle_input = \"129,154,49,198,200,133,97,254,41,6,2,1,255,0,191,108\"\n",
+    "#puzzle_input = \"1,2,4\"\n",
+    "puzzle_input = [ord(c) for c in puzzle_input] + suffix\n",
+    "puzzle_input[:10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(256, [42, 76, 171, 225, 88, 217, 98, 152, 216, 101])"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "string = [i for i in range(256)]\n",
+    "\n",
+    "skip_size = 0\n",
+    "cur_pos = 0\n",
+    "\n",
+    "for _ in range(64):\n",
+    "    for num in puzzle_input:\n",
+    "        string = make_substring_and_reverse(cur_pos, num)\n",
+    "        # make cur_pos circular\n",
+    "        cur_pos += (num + skip_size)\n",
+    "        if cur_pos > len(string):\n",
+    "            cur_pos = cur_pos % len(string)\n",
+    "        skip_size += 1\n",
+    "\n",
+    "len(string), string[:10]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "the xor operator applies to two items only, so the reduce function applys it to the first two items in the list, gets one item back, then applies that one item and the next item in the list, and so on till its **reduced** to a single value.\n",
+    "\n",
+    "For such a useful tool, strange that its not built into python and has to be imported from functools."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[98, 226, 32, 77, 44, 164, 244, 146, 79, 110, 122, 128, 241, 40, 135, 134]"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from functools import reduce\n",
+    "import operator\n",
+    "\n",
+    "hash = []\n",
+    "for i in range(0,256,16):\n",
+    "    h = reduce(operator.xor, string[i:i+16])\n",
+    "    hash.append(h)\n",
+    "hash"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now to convert to a hexadecimal\n",
+    "\n",
+    ">  64, 7, 255, they correspond to the hexadecimal numbers 40, 07, ff,\n",
+    "\n",
+    "I can use the hex function, but [string formatting](https://docs.python.org/3/library/string.html#format-string-syntax) was easier as its easy to specify the number of characters:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['62', 'e2', '20', '4d', '2c', 'a4', 'f4', '92', '4f', '6e']"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "final_hash = [f\"{c:02x}\" for c in hash]\n",
+    "final_hash[:10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "62e2204d2ca4f4924f6e7a80f1288786\n"
+     ]
+    }
+   ],
+   "source": [
+    "final_hash = \"\".join(final_hash)\n",
+    "print(final_hash)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Notes:\n",
+    "\n",
+    "- got royally stuck on a very simple error: I was rotating cur_pos by doing `cur_pos -= len(string)` instead of `cur_pos = cur_pos % len(string)`. Seems trivial but was a royal pain to understand where the fault was.\n",
+    "- final answer is `\"62e2204d2ca4f4924f6e7a80f1288786\"` in case I rerun this notebook and loose it."
+   ]
   }
  ],
  "metadata": {
@@ -272,7 +441,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
