--- a/Day 15 - Dueling Generators.ipynb
+++ b/Day 15 - Dueling Generators.ipynb
@@ -52,12 +52,247 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
-    "puzzle_input = \"\"\"Generator A starts with 277\n",
-    "Generator B starts with 349\"\"\""
+    "# puzzle input\n",
+    "gen_a_seed = 277\n",
+    "geb_b_seed = 349"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Testing how to convert a number to binary, and pad it so it's at least 16 digits longs:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'0000000000000001'"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bin(1).lstrip('-0b').zfill(16)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This is so far the easiest challange in the advent calendar, seems very straightforward:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def gen_a(num):\n",
+    "    new_num = (num * 16807) % 2147483647\n",
+    "    return new_num\n",
+    "\n",
+    "def gen_b(num):\n",
+    "    new_num = (num * 48271) % 2147483647\n",
+    "    return new_num\n",
+    "\n",
+    "def duel_gen(pairs=5, a=277, b=349):\n",
+    "    \"\"\"runs two generators pairs times, and returns the number of binary matches\"\"\"\n",
+    "    matches = 0\n",
+    "    \n",
+    "    for _ in range(pairs):\n",
+    "        a = gen_a(a)\n",
+    "        b = gen_b(b)\n",
+    "        \n",
+    "        a_bin = bin(a).lstrip('-0b').zfill(16)\n",
+    "        b_bin = bin(b).lstrip('-0b').zfill(16)\n",
+    "        \n",
+    "        if a_bin[-16:] == b_bin[-16:]:\n",
+    "            matches += 1\n",
+    "    \n",
+    "    return matches\n",
+    "\n",
+    "duel_gen(a=65, b=8921)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The test ou"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "592"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "duel_gen(pairs=4*10**7)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# --- Part Two ---\n",
+    "\n",
+    "In the interest of trying to align a little better, the generators get more picky about the numbers they actually give to the judge.\n",
+    "\n",
+    "They still generate values in the same way, but now they only hand a value to the judge when it meets their criteria:\n",
+    "\n",
+    "Generator A looks for values that are multiples of 4.\n",
+    "Generator B looks for values that are multiples of 8.\n",
+    "Each generator functions completely independently: they both go through values entirely on their own, only occasionally handing an acceptable value to the judge, and otherwise working through the same sequence of values as before until they find one.\n",
+    "\n",
+    "The judge still waits for each generator to provide it with a value before comparing them (using the same comparison method as before). It keeps track of the order it receives values; the first values from each generator are compared, then the second values from each generator, then the third values, and so on.\n",
+    "\n",
+    "Using the example starting values given above, the generators now produce the following first five values each:\n",
+    "\n",
+    "```\n",
+    "--Gen. A--  --Gen. B--\n",
+    "1352636452  1233683848\n",
+    "1992081072   862516352\n",
+    " 530830436  1159784568\n",
+    "1980017072  1616057672\n",
+    " 740335192   412269392\n",
+    "```\n",
+    "\n",
+    "These values have the following corresponding binary values:\n",
+    "\n",
+    "```\n",
+    "01010000100111111001100000100100\n",
+    "01001001100010001000010110001000\n",
+    "\n",
+    "01110110101111001011111010110000\n",
+    "00110011011010001111010010000000\n",
+    "\n",
+    "00011111101000111101010001100100\n",
+    "01000101001000001110100001111000\n",
+    "\n",
+    "01110110000001001010100110110000\n",
+    "01100000010100110001010101001000\n",
+    "\n",
+    "00101100001000001001111001011000\n",
+    "00011000100100101011101101010000\n",
+    "```\n",
+    "\n",
+    "Unfortunately, even though this change makes more bits similar on average, none of these values' lowest 16 bits match. Now, it's not until the 1056th pair that the judge finds the first match:\n",
+    "\n",
+    "```\n",
+    "--Gen. A--  --Gen. B--\n",
+    "1023762912   896885216\n",
+    "\n",
+    "00111101000001010110000111100000\n",
+    "00110101011101010110000111100000\n",
+    "```\n",
+    "\n",
+    "This change makes the generators much slower, and the judge is getting impatient; it is now only willing to consider 5 million pairs. (Using the values from the example above, after five million pairs, the judge would eventually find a total of 309 pairs that match in their lowest 16 bits.)\n",
+    "\n",
+    "After 5 million pairs, but using this new generator logic, what is the judge's final count?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "309"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def gen_a(num):\n",
+    "    new_num = (num * 16807) % 2147483647\n",
+    "    while new_num % 4 != 0:\n",
+    "        new_num = (new_num * 16807) % 2147483647\n",
+    "    return new_num\n",
+    "\n",
+    "def gen_b(num):\n",
+    "    new_num = (num * 48271) % 2147483647\n",
+    "    while new_num % 8 != 0:\n",
+    "        new_num = (new_num * 48271) % 2147483647\n",
+    "    return new_num\n",
+    "\n",
+    "def duel_gen(pairs=5, a=277, b=349):\n",
+    "    \"\"\"runs two generators pairs times, and returns the number of binary matches\"\"\"\n",
+    "    matches = 0\n",
+    "    \n",
+    "    for _ in range(pairs):\n",
+    "        a = gen_a(a)\n",
+    "        b = gen_b(b)\n",
+    "        \n",
+    "        a_bin = bin(a).lstrip('-0b').zfill(16)\n",
+    "        b_bin = bin(b).lstrip('-0b').zfill(16)\n",
+    "        \n",
+    "        if a_bin[-16:] == b_bin[-16:]:\n",
+    "            matches += 1\n",
+    "    \n",
+    "    return matches\n",
+    "\n",
+    "duel_gen(pairs=5*10**6, a=65, b=8921)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "320"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "duel_gen(pairs=5*10**6)"
    ]
   },
   {
