solved Day 18 part 1, part 2 looks tough

--- a/Day 11 - Hex Ed.ipynb
+++ b/Day 11 - Hex Ed.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -55,7 +55,7 @@
        "['s', 'nw', 's', 'sw', 'ne', 'sw', 'nw', 's', 's', 's']"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -67,44 +67,122 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 9,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "grid = {\"n\": (0,1), \"s\":(0,-1), \"ne\": (1,1), \"nw\": (-1,1), \"se\": (1,-1), \"sw\": (-1, -1)}"
+    "After trying many methods, I selected on using a even-q hexgrid as described [here](https://www.redblobgames.com/grids/hexagons/). BUT, my distance algorithim doesn't work properly, so fix."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 85,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([696,  32]), 696, 1461, 364)"
+      ]
+     },
+     "execution_count": 85,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "def follow_path(path):\n",
-    "    \"\"\"takes in a path, follows it and returns distance from starting point\"\"\""
+    "import numpy as np\n",
+    "\n",
+    "class Hexgrid:\n",
+    "    def __init__(self):\n",
+    "        self.even = True\n",
+    "        self.pos = np.array([0,0])\n",
+    "        self.grid_even = {\"n\": (0,1), \"s\": (0,-1), \"ne\": (1,0), \n",
+    "                     \"sw\": (-1,1), \"nw\": (-1,0), \"se\": (1,1)}\n",
+    "        self.grid_odd = {\"n\": (0,1), \"s\": (0,-1), \"ne\": (1,-1), \n",
+    "                     \"sw\": (-1,0), \"nw\": (-1,-1), \"se\": (1,0)}\n",
+    "        self.dist = 0\n",
+    "        self.max_dist = 0\n",
+    "    \n",
+    "    def move(self, direction):\n",
+    "        if self.even:\n",
+    "            self.pos += self.grid_even[direction]\n",
+    "            self.even = False\n",
+    "        else:\n",
+    "            self.pos += self.grid_odd[direction]\n",
+    "            self.even = True\n",
+    "        \n",
+    "        distance = self.distance()\n",
+    "        if self.max_dist < distance:\n",
+    "            self.max_dist = distance\n",
+    "            \n",
+    "    def position(self):\n",
+    "        return self.pos\n",
+    "            \n",
+    "    def distance(self):\n",
+    "        \"\"\"one works when both postions are +ve, fix this later\"\"\"\n",
+    "        if self.pos[0] > 0 and self.pos[1] > 0:\n",
+    "            return self.pos.max()\n",
+    "        else:\n",
+    "            return abs(self.pos).max()\n",
+    "    \n",
+    "    def distance2(self):\n",
+    "        x = self.pos[0]\n",
+    "        y = self.pos[1]\n",
+    "        line = 0\n",
+    "        \n",
+    "        if abs(y) > abs(x):\n",
+    "            line = (abs(y) - abs(x))\n",
+    "            diag = abs(x)\n",
+    "        elif abs(y) < abs(x):\n",
+    "            line = (abs(x) - abs(y))//2\n",
+    "            diag = abs(y)\n",
+    "        else:\n",
+    "            diag = abs(x)\n",
+    "        \n",
+    "        return diag + line\n",
+    "               \n",
+    "        \n",
+    "h = Hexgrid()\n",
+    "\n",
+    "for move in puzzle_input:\n",
+    "    h.move(move)\n",
+    "    \n",
+    "h.position(), h.distance(), h.max_dist, h.distance2()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "So this works for the puzzle input but fails on the test inputs:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 86,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3 2 3\n",
+      "0 0 0\n",
+      "3 3 2\n",
+      "3 3 3\n"
+     ]
+    }
+   ],
    "source": [
     "tests = [\"ne,ne,ne\", \"ne,ne,sw,sw\", \"ne,ne,s,s\", \"se,sw,se,sw,sw\"]\n",
     "test_ans = [3,0,2,3]\n",
     "\n",
-    "for i, t in enumerate(tests):\n",
-    "    moves = tests[i].strip().split(\",\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import seaborn as sns"
+    "for i, test in enumerate(tests):\n",
+    "    moves = test.strip().split(\",\")\n",
+    "    h = Hexgrid()\n",
+    "    for m in moves:\n",
+    "        h.move(m)\n",
+    "    print(h.distance(), h.distance2(), test_ans[i])"
    ]
   },
   {
