--- a/Day 14 - Disk Defragmentation.ipynb
+++ b/Day 14 - Disk Defragmentation.ipynb
@@ -90,12 +90,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "disk = np.zeros([128,128])"
+    "disk = np.zeros([128,128])\n",
+    "disk"
    ]
   },
   {
@@ -148,7 +149,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
