Eureka! solved Day 18 Part 2. Took way longer than it should have because of a stupid bug

--- a/Day 18 - Duet.ipynb
+++ b/Day 18 - Duet.ipynb
@@ -62,9 +62,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['set i 31',\n",
+       " 'set a 1',\n",
+       " 'mul p 17',\n",
+       " 'jgz p p',\n",
+       " 'mul a 2',\n",
+       " 'add i -1',\n",
+       " 'jgz i -2',\n",
+       " 'add a -1',\n",
+       " 'set i 127',\n",
+       " 'set p 735']"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# the puzzle input\n",
     "with open('puzzle_inputs/day18_input.txt') as f:\n",
@@ -75,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -107,13 +127,13 @@
     "        try:\n",
     "            x = int(f[1])\n",
     "        except:\n",
-    "            x = f\"'{f[1]}'\"\n",
+    "            x = f[1]\n",
     "\n",
     "        if len(f) == 3:\n",
     "            try:\n",
     "                y = int(f[2])\n",
     "            except:\n",
-    "                y = f\"'{f[2]}'\"\n",
+    "                y = f[2]\n",
     "        \n",
     "        if func == \"rcv\":\n",
     "            if verbose: print(registers)\n",
@@ -208,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,12 +236,9 @@
     "from queue import Queue\n",
     "from collections import defaultdict\n",
     "\n",
-    "# the puzzle input\n",
-    "with open('puzzle_inputs/day18_input.txt') as f:\n",
-    "    data = f.read().strip().split(\"\\n\")\n",
-    "puzzle_input = [line for line in data]\n",
+    "lock = Lock()\n",
     "\n",
-    "def do_ins_threaded(instructions, progam_id, inqueue, outqueue, verbose=False):\n",
+    "def do_ins_threaded(instructions, progam_id, inqueue, outqueue, lock=lock, verbose=False):\n",
     "    \"\"\"goes through instructions and perfoms them as per part one\"\"\"\n",
     "    \n",
     "    registers = defaultdict(int)\n",
@@ -235,34 +252,36 @@
     "    while i >=0 and i < total_instructions:\n",
     "        # first, parse instruction\n",
     "        f = instructions[i].split()\n",
-    "        #if verbose: print(progam_id, i, f)\n",
+    "        #if verbose: print(progam_id, i, total_instructions)\n",
     "        func = f[0]\n",
     "        \n",
     "        try:\n",
     "            x = int(f[1])\n",
     "        except:\n",
-    "            x = f\"'{f[1]}'\"\n",
-    "\n",
+    "            x = f[1]\n",
+    "            \n",
     "        if len(f) == 3:\n",
     "            try:\n",
     "                y = int(f[2])\n",
     "            except:\n",
-    "                y = f\"'{f[2]}'\"\n",
-    "        \n",
+    "                y = f[2]\n",
+    "                \n",
     "        # now to run the func code\n",
     "        if func == \"rcv\":\n",
     "            try:\n",
-    "                registers[\"x\"] = inqueue.get(timeout=5)\n",
+    "                new_val = inqueue.get(block=True, timeout=1.5)\n",
+    "                registers[x] = new_val\n",
     "            except:\n",
     "                print(f\"no more messages left for Program {progam_id}\")\n",
     "                break\n",
     "            rcv_msgs += 1\n",
     "            #if verbose: print(f\"Progam {progam_id} received msg {rcv_msgs}\")\n",
     "        elif func == \"snd\":\n",
-    "            #with lock:\n",
-    "            outqueue.put(registers[x])\n",
-    "            sent_msgs += 1\n",
-    "            if verbose: print(f\"Program {progam_id} sent message {sent_msgs}\")\n",
+    "            with lock:\n",
+    "                x = registers[x] if type(x) is str else x\n",
+    "                outqueue.put(x)\n",
+    "                sent_msgs += 1\n",
+    "                if verbose: print(f\"Program {progam_id} sent message {sent_msgs}\")\n",
     "        elif func == \"set\":\n",
     "            y = registers[y] if type(y) is str else y\n",
     "            registers[x] = y\n",
@@ -285,17 +304,26 @@
     "            break\n",
     "                \n",
     "        i += 1\n",
-    "        \n",
-    "    print(f\"----{progam_id} ends here----\")\n",
-    "    print(f\"P {progam_id} sent {sent_msgs} messages, received {rcv_msgs} msgs\")\n",
-    "    print(\"-------\")\n",
+    "    \n",
+    "    with lock:\n",
+    "        print(f\"----{progam_id} ends here----\")\n",
+    "        print(f\"P {progam_id} sent {sent_msgs} messages, received {rcv_msgs} msgs\")\n",
+    "        print(registers)\n",
+    "        print(\"-------\")\n",
     "    \n",
     "    return True"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Testing the above on the test case:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -303,19 +331,15 @@
      "output_type": "stream",
      "text": [
       "['snd 1', 'snd 2', 'snd p', 'rcv a', 'rcv b', 'rcv c', 'rcv d']\n",
-      "Program 0 sent message 1\n",
-      "Program 0 sent message 2\n",
-      "Program 0 sent message 3\n",
-      "Program 1 sent message 1\n",
-      "Program 1 sent message 2\n",
-      "Program 1 sent message 3\n",
-      "no more messages left for Program 1no more messages left for Program 0\n",
+      "no more messages left for Program 1\n",
       "----1 ends here----\n",
       "P 1 sent 3 messages, received 3 msgs\n",
+      "defaultdict(<class 'int'>, {'p': 1, 'a': 1, 'b': 2, 'c': 0})\n",
       "-------\n",
-      "\n",
+      "no more messages left for Program 0\n",
       "----0 ends here----\n",
       "P 0 sent 3 messages, received 3 msgs\n",
+      "defaultdict(<class 'int'>, {'p': 0, 'a': 1, 'b': 2, 'c': 1})\n",
       "-------\n"
      ]
     }
@@ -333,16 +357,23 @@
     "q1 = Queue()\n",
     "q2 = Queue()\n",
     "\n",
-    "t1 = Thread(target=do_ins_threaded, args=(test_input, 0, q1, q2, True,))\n",
-    "t2 = Thread(target=do_ins_threaded, args=(test_input, 1, q2, q1, True,))\n",
+    "t1 = Thread(target=do_ins_threaded, args=(test_input, 0, q1, q2, lock, False,))\n",
+    "t2 = Thread(target=do_ins_threaded, args=(test_input, 1, q2, q1, lock, False,))\n",
     "\n",
     "t1.start() \n",
     "t2.start()"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now on the actual case:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -351,32 +382,61 @@
      "text": [
       "no more messages left for Program 0\n",
       "----0 ends here----\n",
-      "P 0 sent 254 messages, received 254 msgs\n",
+      "P 0 sent 7366 messages, received 7239 msgsno more messages left for Program 1\n",
+      "\n",
+      "defaultdict(<class 'int'>, {'p': -91, 'i': 0, 'a': 26, 'b': 26, 'f': 0})\n",
       "-------\n",
-      "no more messages left for Program 1\n",
       "----1 ends here----\n",
-      "P 1 sent 254 messages, received 254 msgs\n",
+      "P 1 sent 7239 messages, received 7366 msgs\n",
+      "defaultdict(<class 'int'>, {'p': -91, 'i': 0, 'a': 26, 'f': 0, 'b': 26})\n",
       "-------\n"
      ]
     }
    ],
    "source": [
-    "q1 = Queue()\n",
-    "q2 = Queue()\n",
+    "p1_q = Queue()\n",
+    "p2_q = Queue()\n",
+    "#lock = Lock()\n",
     "\n",
-    "puzzle_thread_1 = Thread(target=do_ins_threaded, args=(puzzle_input, 0, q1, q2, False,))\n",
-    "puzzle_thread_2 = Thread(target=do_ins_threaded, args=(puzzle_input, 1, q2, q1, False,))\n",
+    "puzzle_thread_1 = Thread(target=do_ins_threaded, args=(puzzle_input, 0, p1_q, p2_q, lock, False,))\n",
+    "puzzle_thread_2 = Thread(target=do_ins_threaded, args=(puzzle_input, 1, p2_q, p1_q, lock, False,))\n",
     "\n",
     "puzzle_thread_1.start() \n",
     "puzzle_thread_2.start()"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Eureka! The correct answer is `7239`. This took the longest time by far of all the advent puzzles.\n",
+    "\n",
+    "Notes:\n",
+    "\n",
+    "- learn more about threading and multiprocessing. \n",
+    "- should I have used asyncio here?\n",
+    "- whats the best way to parse incoming commands in string form? use if/else statements, eval or something else?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(True, True, False, False)"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p1_q.empty(), p2_q.empty(), puzzle_thread_1.is_alive(), puzzle_thread_2.is_alive()"
+   ]
   }
  ],
  "metadata": {
